	  CanoScan N1220U is now supported by the Plustek backend.
	* doc/plustek: Added this directory to store various Plustek
	  information files.

2003-01-11  Henning Meier-Geinitz <henning@meier-geinitz.de>

	* doc/descriptions/unsupported.desc
	  doc/descriptions-external/primax.desc: Some Primax scanners (and
	  clones) are now supported by the primax backend.

2003-01-10  Henning Meier-Geinitz <henning@meier-geinitz.de>

	* po/sane-backends.pt.po: Even more Portuguese translations from
	  Pedro Morais <morais@inocam.com>.
	* sanei/sanei_usb.c: Comment out resetep at sane_close. This 
	  function sets th USB data toggle only on the host side.
	* TODO: Removed microtek2 problem, updated Irix patch section and
	  Linux/Sparc section.
	* NEWS: Updated for 1.0.10.
	* backend/mustek.c: Removed hardcoded option size.

2003-01-10  Gerhard Jaeger <gerhard@gjaeger.de>

	* TODO: Plustek backend now supports libusb, moved appropriate line
	  to done section.

2003-01-10  Gerhard Jaeger <gerhard@gjaeger.de>

	* doc/sane-plustek.man: update to reflect version change
	* doc/descriptions/plustek.desc: Added some Canon entries, status updates
	* backend/plustek.conf updated options
	* backend/plustek.c backend/plustek-devs.c backend/plustek-usb.c
	  backend/plustek-usbhw.c backend/plustek-pp.c
	  backend/plustek-usbmap.c backend/plustek-usbimg.c
	  backend/plustek-usbscan.c backend/plustek-usbshading.c
	  backend/plustek.h backend/plustek-share.h backend/plustek-usb.h
	  New version + support for libusb

2003-01-09  Peter Fales  <peter@fales-lorenz.net>

        * backend/dc210.c, backend/dc240.c:  Fix compile failure
	  on OS/2.

2003-01-09  Henning Meier-Geinitz <henning@meier-geinitz.de>

	* backend/gt68xx.c backend/gt68xx.conf backend/gt68xx_devices.c
	  backend/gt68xx_high.c doc/sane-gt68xx.man
	  doc/descriptions/gt68xx.desc doc/gt68xx/gt68xx.CHANGES:
	  Updated manpage and .desc concerning Lexmark X70. Updated manpage