@@ -1,6 +1,11 @@
 # See sane-microtek2(5) for a description of the options
 
 option dump 1
-# option lightlid-35 on
-# option no-backtrack-option on
+#option strip-height 14.0
+option no-backtrack-option on
+option lightlid-35 on
+option toggle-lamp on
+option lineart-autoadjust on
+option backend-calibration on
+#option colorbalance-adjust on
 scsi * * Scanner
